# MultiModal_RAG

./: pyproject.toml  start_qdrant.sh
qdrant_rag_system/: document_processor.py  embedder.py  groq_rag_agent.py  main.py  qdrant_manager.py  rag_agent.py  requirements.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/mig_26_images/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/mig_26_images/0/segments/20643659-56ed-4e2d-9035-c045d33139f9/: mutable_id_tracker.mappings
qdrant_storage/collections/mig_26_images/0/segments/510ae5bb-ff4e-4f59-b175-27177c33b884/: mutable_id_tracker.mappings
qdrant_storage/collections/mig_26_images/0/segments/f39f6525-5482-4b75-8809-3c1ec403d409/: mutable_id_tracker.mappings
