[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-qdrant>=1.1.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]
